--- a/qtl/Dockerfile
+++ b/qtl/Dockerfile
@@ -33,14 +33,20 @@ ENV RMATH /R-3.2.5/src
 
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.4.1/htslib-1.4.1.tar.bz2 && \
-    tar -xf htslib-1.4.1.tar.bz2 && rm htslib-1.4.1.tar.bz2 && cd htslib-1.4.1 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.6/htslib-1.6.tar.bz2 && \
+    tar -xf htslib-1.6.tar.bz2 && rm htslib-1.6.tar.bz2 && cd htslib-1.6 && make && make install && make clean
 
 # bcftools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.4.1/bcftools-1.4.1.tar.bz2 && \
-    tar -xf bcftools-1.4.1.tar.bz2 && rm bcftools-1.4.1.tar.bz2 && cd bcftools-1.4.1 && \
+    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.6/bcftools-1.6.tar.bz2 && \
+    tar -xf bcftools-1.6.tar.bz2 && rm bcftools-1.6.tar.bz2 && cd bcftools-1.6 && \
     make && make install && make clean
+
+# samtools
+RUN cd /opt && \
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.6/samtools-1.6.tar.bz2 && \
+    tar -xf samtools-1.6.tar.bz2 && rm samtools-1.6.tar.bz2 && cd samtools-1.6 && \
+    ./configure --with-htslib=/opt/htslib-1.6 && make && make install && make clean
 
 # FastQTL
 RUN cd /opt && \
@@ -49,11 +55,11 @@ RUN cd /opt && \
 ENV PATH /opt/fastqtl/bin:$PATH
 
 # Python
-RUN pip3 install --upgrade pip && pip3 install numpy tables pandas scipy matplotlib pyBigWig h5py feather-format rpy2
+RUN pip3 install --upgrade pip && pip3 install numpy tables pandas scipy matplotlib pyBigWig h5py feather-format
 
 # PLINK
 RUN mkdir /opt/plink && cd /opt/plink && \
-    wget https://www.cog-genomics.org/static/bin/plink170815/plink_linux_x86_64.zip && \
+    wget https://www.cog-genomics.org/static/bin/plink171013/plink_linux_x86_64.zip && \
     unzip plink_linux_x86_64.zip && rm plink_linux_x86_64.zip
 ENV PATH $PATH:/opt/plink
 
@@ -61,6 +67,13 @@ ENV PATH $PATH:/opt/plink
 RUN mkdir /opt/metasoft && cd /opt/metasoft && \
     wget http://genetics.cs.ucla.edu/meta/repository/2.0.1/Metasoft.zip && \
     unzip Metasoft.zip && rm Metasoft.zip
+
+# clean up
+RUN apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
+    apt-get autoclean && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/{apt,dpkg,cache,log}/
 
 # copy scripts
 COPY src src/
