add pyqtl to Dockerfile, add ignore_version to prep_expr, make handling of numeric sample ids more robust

--- a/qtl/Dockerfile
+++ b/qtl/Dockerfile
@@ -79,7 +79,7 @@ RUN mkdir /opt/metasoft && cd /opt/metasoft && \
 
 # Python
 RUN pip3 install --upgrade pip setuptools
-RUN pip3 install numpy tables pandas scipy matplotlib h5py feather-format pysam statsmodels scikits.bootstrap
+RUN pip3 install numpy tables pandas scipy matplotlib h5py feather-format pysam statsmodels scikits.bootstrap qtl
 # numpy dependencies:
 RUN pip3 install pyBigWig
 
