--- a/qtl/leafcutter/Dockerfile
+++ b/qtl/leafcutter/Dockerfile
@@ -1,24 +1,31 @@
 # Dockerfile for LeafCutter
-FROM ubuntu:17.04
+FROM ubuntu:18.04
 MAINTAINER Francois Aguet
+ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get -qq update && apt-get install -qqy \
-    build-essential \
-    curl \
-    lbzip2 \
-    libboost-all-dev \
-    libcurl3-dev \
-    libgsl-dev \
-    libssl-dev \
-    libxml2-dev \
-    openjdk-8-jdk \
-    python \
-    python-pip \
-    r-base-core=3.3.2-1 \
-    unzip \
-    vim-common \
-    wget \
-    zlib1g-dev
+RUN apt-get update && apt-get install -y software-properties-common && \
+    apt-get update && apt-get install -y \
+        build-essential \
+        cmake \
+        curl \
+        lbzip2 \
+        libboost-all-dev \
+        libcurl3-dev \
+        libgsl-dev \
+        libssl-dev \
+        libxml2-dev \
+        openjdk-8-jdk \
+        python \
+        python-pip \
+        r-base-core \
+        unzip \
+        vim-common \
+        wget \
+        zlib1g-dev \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
+    apt-get clean && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/{apt,dpkg,cache,log}/
 
 # R
 RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; options(repos = r);" > ~/.Rprofile && \
@@ -27,35 +34,37 @@ RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; 
 
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.6/htslib-1.6.tar.bz2 && \
-    tar -xf htslib-1.6.tar.bz2 && rm htslib-1.6.tar.bz2 && cd htslib-1.6 && make && make install && make clean
-
-# bcftools
-RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.6/bcftools-1.6.tar.bz2 && \
-    tar -xf bcftools-1.6.tar.bz2 && rm bcftools-1.6.tar.bz2 && cd bcftools-1.6 && \
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.13/htslib-1.13.tar.bz2 && \
+    tar -xf htslib-1.13.tar.bz2 && rm htslib-1.13.tar.bz2 && cd htslib-1.13 && \
+    ./configure --enable-libcurl --enable-s3 --enable-plugins --enable-gcs && \
     make && make install && make clean
 
 # samtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.6/samtools-1.6.tar.bz2 && \
-    tar -xf samtools-1.6.tar.bz2 && rm samtools-1.6.tar.bz2 && cd samtools-1.6 && \
-    ./configure --with-htslib=/opt/htslib-1.6 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.13/samtools-1.13.tar.bz2 && \
+    tar -xf samtools-1.13.tar.bz2 && rm samtools-1.13.tar.bz2 && cd samtools-1.13 && \
+    ./configure --with-htslib=/opt/htslib-1.13 && make && make install && make clean
+
+# bcftools
+RUN cd /opt && \
+    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.13/bcftools-1.13.tar.bz2 && \
+    tar -xf bcftools-1.13.tar.bz2 && rm bcftools-1.13.tar.bz2 && cd bcftools-1.13 && \
+    ./configure --with-htslib=/opt/htslib-1.13 && make && make install && make clean
 
 # Python
-RUN pip install --upgrade pip && pip install numpy tables pandas scipy scikit-learn matplotlib feather-format
+RUN pip install --upgrade pip && pip install numpy tables pandas scipy scikit-learn matplotlib
 
 # LeafCutter
 RUN cd /opt && \
     wget https://github.com/davidaknowles/leafcutter/archive/v0.2.7.tar.gz && \
     tar -xf v0.2.7.tar.gz && rm v0.2.7.tar.gz && ln -s leafcutter-0.2.7 leafcutter
 
-# clean up
-RUN apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-    apt-get autoclean && \
-    apt-get autoremove -y && \
-    rm -rf /var/lib/{apt,dpkg,cache,log}/
+# regtools
+RUN cd /opt && \
+    wget https://github.com/griffithlab/regtools/archive/refs/tags/0.5.2.zip && \
+    unzip 0.5.2.zip && rm 0.5.2.zip && cd regtools-0.5.2 && mkdir build && cd build && \
+    cmake .. && make && mv regtools .. && make clean
+ENV PATH /opt/regtools-0.5.2:$PATH
 
 # copy scripts
 COPY src src/
