--- a/qtl/leafcutter/Dockerfile
+++ b/qtl/leafcutter/Dockerfile
@@ -15,8 +15,8 @@ RUN apt-get update && apt-get install -y software-properties-common && \
         libssl-dev \
         libxml2-dev \
         openjdk-8-jdk \
-        python \
-        python-pip \
+        python3 \
+        python3-pip \
         r-base-core \
         unzip \
         vim-common \
@@ -34,32 +34,33 @@ RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; 
 
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.13/htslib-1.13.tar.bz2 && \
-    tar -xf htslib-1.13.tar.bz2 && rm htslib-1.13.tar.bz2 && cd htslib-1.13 && \
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.14/htslib-1.14.tar.bz2 && \
+    tar -xf htslib-1.14.tar.bz2 && rm htslib-1.14.tar.bz2 && cd htslib-1.14 && \
     ./configure --enable-libcurl --enable-s3 --enable-plugins --enable-gcs && \
     make && make install && make clean
 
 # samtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.13/samtools-1.13.tar.bz2 && \
-    tar -xf samtools-1.13.tar.bz2 && rm samtools-1.13.tar.bz2 && cd samtools-1.13 && \
-    ./configure --with-htslib=/opt/htslib-1.13 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.14/samtools-1.14.tar.bz2 && \
+    tar -xf samtools-1.14.tar.bz2 && rm samtools-1.14.tar.bz2 && cd samtools-1.14 && \
+    ./configure --with-htslib=/opt/htslib-1.14 && make && make install && make clean
 
 # bcftools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.13/bcftools-1.13.tar.bz2 && \
-    tar -xf bcftools-1.13.tar.bz2 && rm bcftools-1.13.tar.bz2 && cd bcftools-1.13 && \
-    ./configure --with-htslib=/opt/htslib-1.13 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.14/bcftools-1.14.tar.bz2 && \
+    tar -xf bcftools-1.14.tar.bz2 && rm bcftools-1.14.tar.bz2 && cd bcftools-1.14 && \
+    ./configure --with-htslib=/opt/htslib-1.14 && make && make install && make clean
 
-# Python
-RUN pip install --upgrade pip && pip install numpy tables pandas scipy scikit-learn matplotlib
+# Python 3
+RUN pip3 install --upgrade pip setuptools
+RUN pip3 install numpy tables pandas scipy scikit-learn matplotlib
 
 # LeafCutter
 RUN cd /opt && \
-    wget https://github.com/davidaknowles/leafcutter/archive/3f875f1ac05a0f0413884c0d016b3c7ae17713c9.tar.gz && \
-    tar -xf 3f875f1ac05a0f0413884c0d016b3c7ae17713c9.tar.gz && \
-    rm 3f875f1ac05a0f0413884c0d016b3c7ae17713c9.tar.gz && \
-    ln -s leafcutter-3f875f1ac05a0f0413884c0d016b3c7ae17713c9 leafcutter
+    wget https://github.com/francois-a/leafcutter/archive/2488118d377baff3354dab85de1f31b03a813c92.tar.gz && \
+    tar -xf 2488118d377baff3354dab85de1f31b03a813c92.tar.gz && \
+    rm 2488118d377baff3354dab85de1f31b03a813c92.tar.gz && \
+    ln -s leafcutter-2488118d377baff3354dab85de1f31b03a813c92 leafcutter
 
 # regtools
 RUN cd /opt && \
