--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -6,6 +6,9 @@ workflows:
   - name: CrossCheckSample
     subclass: WDL
     primaryDescriptorPath: /utils/Fingerprinting.wdl
+   - name: IdentifySample
+    subclass: WDL
+    primaryDescriptorPath: /utils/IdentifySample.wdl
   - name: ConvertPlinkToVcf
     subclass: WDL
     primaryDescriptorPath: /utils/Plink.wdl
