Adding a crosscheck WF

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -15,4 +15,7 @@ workflows:
   - name: LoadPicardMetrics
     subclass: WDL
     primaryDescriptorPath: /utils/PicardMetrics.wdl
+  - name: CrosscheckDataWF
+    subclass: WDL
+    primaryDescriptorPath: /utils/CrosscheckData.wdl
     
