add bam_to_junc wdl

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -18,4 +18,7 @@ workflows:
   - name: CrosscheckDataWF
     subclass: WDL
     primaryDescriptorPath: /utils/CrosscheckData.wdl
+  - name: Bam2Junction
+    subclass: WDL
+    primaryDescriptorPath: /qtl/leafcutter/leafcutter_bam_to_junc.wdl
     
