--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -24,3 +24,6 @@ workflows:
   - name: CreateParticipantSampleSets
     subclass: WDL
     primaryDescriptorPath: /utils/CreateParticipantSampleSets.wdl 
+- name: GetString
+    subclass: WDL
+    primaryDescriptorPath: /utils/GetString.wdl 
