Cluster Leafcutter junctions

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -21,6 +21,9 @@ workflows:
   - name: Bam2Junction
     subclass: WDL
     primaryDescriptorPath: /qtl/leafcutter/leafcutter_bam_to_junc.wdl
+  - name: ClusterJunctions
+    subclass: WDL
+    primaryDescriptorPath: /qtl/leafcutter/leafcutter_cluster.wdl.wdl
   - name: CreateParticipantSampleSets
     subclass: WDL
     primaryDescriptorPath: /utils/CreateParticipantSampleSets.wdl
