needed to add two R libraries as well

--- a/qtl/leafcutter/Dockerfile
+++ b/qtl/leafcutter/Dockerfile
@@ -29,7 +29,7 @@ RUN apt-get update && apt-get install -y software-properties-common && \
 
 # R
 RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; options(repos = r);" > ~/.Rprofile && \
-    Rscript -e "install.packages(c('argparser', 'devtools'), dependencies=TRUE)" && \
+    Rscript -e "install.packages(c('argparser', 'devtools', 'dplyr', 'foreach'), dependencies=TRUE)" && \
     Rscript -e 'source("http://bioconductor.org/biocLite.R"); biocLite("qvalue"); biocLite("sva"); biocLite("edgeR");'
 
 # htslib
