--- a/qtl/Dockerfile
+++ b/qtl/Dockerfile
@@ -44,32 +44,27 @@ RUN wget https://github.com/downloads/PMBio/peer/R_peer_source_1.3.tgz && \
     Rscript -e "install.packages(c('argparser'), dependencies=TRUE)" && \
     Rscript -e 'source("http://bioconductor.org/biocLite.R"); biocLite("qvalue"); biocLite("sva"); biocLite("edgeR");'
 
-# standalone R math library
-RUN wget https://cran.r-project.org/src/base/R-3/R-3.4.4.tar.gz && tar -xf R-3.4.4.tar.gz && rm R-3.4.4.tar.gz \
-    && cd R-3.4.4 && ./configure --with-x=no && cd src/nmath/standalone && make
-ENV RMATH /R-3.4.4/src
-
 # htslib
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.9/htslib-1.9.tar.bz2 && \
-    tar -xf htslib-1.9.tar.bz2 && rm htslib-1.9.tar.bz2 && cd htslib-1.9 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.15/htslib-1.15.tar.bz2 && \
+    tar -xf htslib-1.15.tar.bz2 && rm htslib-1.15.tar.bz2 && cd htslib-1.15 && make && make install && make clean
 
 # bcftools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.9/bcftools-1.9.tar.bz2 && \
-    tar -xf bcftools-1.9.tar.bz2 && rm bcftools-1.9.tar.bz2 && cd bcftools-1.9 && \
-    ./configure --with-htslib=/opt/htslib-1.9 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.15/bcftools-1.15.tar.bz2 && \
+    tar -xf bcftools-1.15.tar.bz2 && rm bcftools-1.15.tar.bz2 && cd bcftools-1.15 && \
+    ./configure --with-htslib=/opt/htslib-1.15 && make && make install && make clean
 
 # samtools
 RUN cd /opt && \
-    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.9/samtools-1.9.tar.bz2 && \
-    tar -xf samtools-1.9.tar.bz2 && rm samtools-1.9.tar.bz2 && cd samtools-1.9 && \
-    ./configure --with-htslib=/opt/htslib-1.9 && make && make install && make clean
+    wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.15/samtools-1.15.tar.bz2 && \
+    tar -xf samtools-1.15.tar.bz2 && rm samtools-1.15.tar.bz2 && cd samtools-1.15 && \
+    ./configure --with-htslib=/opt/htslib-1.15 && make && make install && make clean
 
-# PLINK
+# PLINK 1.9
 RUN mkdir /opt/plink && cd /opt/plink && \
-    wget http://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20200107.zip && \
-    unzip plink_linux_x86_64_20200107.zip && rm plink_linux_x86_64_20200107.zip
+    wget --no-check-certificate https://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20220305.zip && \
+    unzip plink_linux_x86_64_20220305.zip && rm plink_linux_x86_64_20220305.zip
 ENV PATH $PATH:/opt/plink
 
 # METASOFT
@@ -79,17 +74,9 @@ RUN mkdir /opt/metasoft && cd /opt/metasoft && \
 
 # Python
 RUN pip3 install --upgrade pip setuptools
-RUN pip3 install numpy tables pandas scipy matplotlib h5py feather-format pysam statsmodels scikits.bootstrap
+RUN pip3 install numpy tables pandas scipy matplotlib h5py pysam statsmodels scikits.bootstrap qtl
 # numpy dependencies:
 RUN pip3 install pyBigWig
-
-# FastQTL
-RUN cd /opt && \
-    wget https://github.com/francois-a/fastqtl/archive/59bcdc06c4277b2cf2e06f242eb89f7e1fd4cacd.tar.gz && \
-    tar -xf 59bcdc06c4277b2cf2e06f242eb89f7e1fd4cacd.tar.gz && rm 59bcdc06c4277b2cf2e06f242eb89f7e1fd4cacd.tar.gz && \
-    mv fastqtl-59bcdc06c4277b2cf2e06f242eb89f7e1fd4cacd fastqtl && \
-    cd fastqtl && mkdir obj && sed -i 's/RMATH=/#RMATH/' Makefile && make
-ENV PATH /opt/fastqtl/bin:$PATH
 
 # aFC
 RUN cd /opt && \
